; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_remez.c_CalcError.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_remez.c_CalcError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, double*, double*, double*, i32, double*, double*, double*, double*)* @CalcError to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CalcError(i32 %0, double* %1, double* %2, double* %3, i32 %4, double* %5, double* %6, double* %7, double* %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca double*, align 8
  %12 = alloca double*, align 8
  %13 = alloca double*, align 8
  %14 = alloca i32, align 4
  %15 = alloca double*, align 8
  %16 = alloca double*, align 8
  %17 = alloca double*, align 8
  %18 = alloca double*, align 8
  %19 = alloca i32, align 4
  %20 = alloca double, align 8
  store i32 %0, i32* %10, align 4
  store double* %1, double** %11, align 8
  store double* %2, double** %12, align 8
  store double* %3, double** %13, align 8
  store i32 %4, i32* %14, align 4
  store double* %5, double** %15, align 8
  store double* %6, double** %16, align 8
  store double* %7, double** %17, align 8
  store double* %8, double** %18, align 8
  store i32 0, i32* %19, align 4
  br label %21

21:                                               ; preds = %53, %9
  %22 = load i32, i32* %19, align 4
  %23 = load i32, i32* %14, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %56

25:                                               ; preds = %21
  %26 = load double*, double** %15, align 8
  %27 = load i32, i32* %19, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds double, double* %26, i64 %28
  %30 = load double, double* %29, align 8
  %31 = load i32, i32* %10, align 4
  %32 = load double*, double** %11, align 8
  %33 = load double*, double** %12, align 8
  %34 = load double*, double** %13, align 8
  %35 = call double @ComputeA(double %30, i32 %31, double* %32, double* %33, double* %34)
  store double %35, double* %20, align 8
  %36 = load double*, double** %17, align 8
  %37 = load i32, i32* %19, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds double, double* %36, i64 %38
  %40 = load double, double* %39, align 8
  %41 = load double*, double** %16, align 8
  %42 = load i32, i32* %19, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds double, double* %41, i64 %43
  %45 = load double, double* %44, align 8
  %46 = load double, double* %20, align 8
  %47 = fsub double %45, %46
  %48 = fmul double %40, %47
  %49 = load double*, double** %18, align 8
  %50 = load i32, i32* %19, align 4
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds double, double* %49, i64 %51
  store double %48, double* %52, align 8
  br label %53

53:                                               ; preds = %25
  %54 = load i32, i32* %19, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %19, align 4
  br label %21

56:                                               ; preds = %21
  ret void
}

declare dso_local double @ComputeA(double, i32, double*, double*, double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
